# List all bundled images so distribution archives stay consistent.
PNGSUITE_IMAGES = $(shell cd $(srcdir) && find pngsuite -type f -name '*.png' -print)

EXTRA_DIST = .gitattributes \
    autumn.dds \
    autumn.hdp \
    autumn.heic \
    autumn.png \
    autumn.webp \
    egret.jpg \
    fisheye.dds \
    fisheye.hdp \
    fisheye.heic \
    fisheye.png \
    fisheye.webp \
    libsixel.avif \
    libsixel.jxl \
    libsixel.webp \
    map16-palette.png \
    map16.png \
    map64.six \
    map8-palette.png \
    map8.png \
    map8.six \
    seq2gif.gif \
    snake-ascii.pbm \
    snake-ascii.pgm \
    snake-ascii.ppm \
    snake-grayscale.jpg \
    snake-grayscale.png \
    snake-monochrome.png \
    snake-palette.png \
    snake-progressive.jpg \
    snake.bmp \
    snake.gif \
    snake.jpg \
    snake.pbm \
    snake.pgm \
    snake.png \
    snake.webp \
    snake.ppm \
    snake.six \
    snake.tga \
    snake.tiff \
    vimperator3.png \
    $(PNGSUITE_IMAGES)
