fs = import('fs')

# Collect all sample images so `meson dist` ships the full corpus.
pngsuite_images = fs.glob('pngsuite/**/*.png')
root_images = files('autumn.dds',
  'autumn.hdp',
  'autumn.heic',
  'autumn.png',
  'autumn.webp',
  'egret.jpg',
  'fisheye.dds',
  'fisheye.hdp',
  'fisheye.heic',
  'fisheye.png',
  'fisheye.webp',
  'libsixel.avif',
  'libsixel.jxl',
  'libsixel.webp',
  'map16-palette.png',
  'map16.png',
  'map64.six',
  'map8-palette.png',
  'map8.png',
  'map8.six',
  'seq2gif.gif',
  'snake-ascii.pbm',
  'snake-ascii.pgm',
  'snake-ascii.ppm',
  'snake-grayscale.jpg',
  'snake-grayscale.png',
  'snake-monochrome.png',
  'snake-palette.png',
  'snake-progressive.jpg',
  'snake.bmp',
  'snake.gif',
  'snake.jpg',
  'snake.pbm',
  'snake.pgm',
  'snake.png',
  'snake.ppm',
  'snake.six',
  'snake.tga',
  'snake.tiff',
  'vimperator3.png')

meson.add_dist_script('sh', '-c', 'true', sources: pngsuite_images + root_images)
