[metadata]
name = libsixel-python
version = 0.5.1
description = libsixel binding for Python
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Production/Stable
    Topic :: Terminals
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python
keywords = sixel, libsixel, terminal, codec
author = Hayaki Saito
author_email = saitoha@me.com
url = https://github.com/libsixel/libsixel
license = MIT

[options]
packages = find:
